WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246538
Fix unused-but-set-variable warning in WebGL code
https://bugs.webkit.org/show_bug.cgi?id=246538
Summary
Fix unused-but-set-variable warning in WebGL code
Don Olmstead
Reported
2022-10-14 14:40:01 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2022-10-14 14:43:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5391
EWS
Comment 2
2022-10-14 18:45:00 PDT
Committed
255567@main
(384c2cdb8b94): <
https://commits.webkit.org/255567@main
> Reviewed commits have been landed. Closing PR #5391 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-10-14 18:46:18 PDT
<
rdar://problem/101195499
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug