Fix unused-but-set-variable warning in WebGL code https://bugs.webkit.org/show_bug.cgi?id=246538

Reviewed by Tim Nguyen.

* Source/WebCore/html/canvas/WebGLRenderingContextBase.cpp:

Canonical link: https://commits.webkit.org/255567@main